{
    "name": "WarriorControls",
    "maps": [
        {
            "name": "WarriorInput",
            "id": "c85857b1-13e5-4366-bff0-6582a975edf0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "0ff9abed-d4a0-4b56-8a69-7e96d42d8381",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "feb32f97-31cd-4b82-8a13-a7d552d075d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Focus",
                    "type": "Value",
                    "id": "98cd4931-7cd8-498b-9559-cb56aab8eec1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponSwitch",
                    "type": "Value",
                    "id": "31104b48-3d9a-4d2e-ac6f-e49b6fd9288c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d7bcaf1b-a901-408d-9708-7638d1230e96",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a01c14f9-5613-4231-8933-8788cffb1ee1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8de88fb5-244d-4c21-9e23-0af6b6163bef",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "50cd38d7-c14b-40c9-8272-38ab3f9979a5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "50f07994-fdd7-4793-a8f4-9682e6feebd3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c840b35b-979d-4a82-8511-314e8b22b7cd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62e6cc59-104c-45fe-b584-1320c728c745",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Focus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f6e40ab-d8ce-4e11-9bc4-df9d6ddf03c5",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "ab9ad663-255f-4c56-906a-3b87161e50da",
            "actions": [
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "f56f4213-6413-440a-99f6-5082bb08c7eb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "b68707a1-aeeb-4ad3-b859-e09f80c13909",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "5da3adf1-b839-4809-a363-f79a4d64af4e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "814bff4c-b249-4fdc-97d7-d0c6cb1078e2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "ee78615e-6d13-4642-93fb-f460486c6974",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cecae42d-dd7c-4d16-ae48-8c85bec30660",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e028d14-9d3c-4bcc-b6df-66874e325088",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3a3ac4e-bb91-4299-8477-679d2b253c05",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3dd20dbf-56a4-4e95-adb5-d952a5b27112",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6cc8eb5-d8b4-4121-9f9d-2ec0290fab24",
                    "path": "<XRController>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7220b21e-75ca-40dd-9b79-e19eabb94ffa",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e15730b-9ed3-42a0-b570-ddf510c3b2d2",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5ebfffa-175f-4dfe-84ff-edc973710f0c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}